tests/baselines/reference/unclosedExportClause01.errors.txt
t2.ts(1,13): error TS2305: Module '"./t1"' has no exported member 'from'.
t2.ts(1,18): error TS1005: ',' expected.
t3.ts(1,10): error TS2305: Module '"./t1"' has no exported member 'from'.
t3.ts(1,15): error TS1005: ',' expected.
t4.ts(1,17): error TS1005: ',' expected.
t4.ts(1,17): error TS2305: Module '"./t1"' has no exported member 'from'.
t4.ts(1,22): error TS1005: ',' expected.
t5.ts(1,18): error TS2305: Module '"./t1"' has no exported member 'from'.
t5.ts(1,23): error TS1005: ',' expected.


==== t1.ts (0 errors) ====
    export var x = "x";
    
==== t2.ts (2 errors) ====
    export { x, from "./t1"
                ~~~~
!!! error TS2305: Module '"./t1"' has no exported member 'from'.
                     ~~~~~~
!!! error TS1005: ',' expected.
    
==== t3.ts (2 errors) ====
    export { from "./t1"
             ~~~~
!!! error TS2305: Module '"./t1"' has no exported member 'from'.
                  ~~~~~~
!!! error TS1005: ',' expected.
    
==== t4.ts (3 errors) ====
    export { x as a from "./t1"
                    ~~~~
!!! error TS1005: ',' expected.
                    ~~~~
!!! error TS2305: Module '"./t1"' has no exported member 'from'.
                         ~~~~~~
!!! error TS1005: ',' expected.
    
==== t5.ts (2 errors) ====
    export { x as a, from "./t1"
                     ~~~~
!!! error TS2305: Module '"./t1"' has no exported member 'from'.
                          ~~~~~~
!!! error TS1005: ',' expected.